@@ -48,6 +48,8 @@ bzr-svn 0.5.0~rc2				UNRELEASED
 
    * Use unicode objects internally for sqlite. (#296868)
 
+   * Stop iterating over non-visible children of files when determining file ids. (#306259)
+
 bzr-svn 0.5.0~rc1			2008-12-08
 
   CHANGES
